# FirenFrost

./: .gitattributes  CMakeLists.txt
src/com/mnenmenth/firenfrost/core/: FirenFrost.cpp  Viewport.cpp  Viewport.h
src/com/mnenmenth/firenfrost/entity/: AnimFrame.cpp  AnimFrame.h  AnimatedEntity.cpp  AnimatedEntity.h  Entity.cpp  Entity.h  Hitbox.cpp  Hitbox.h
src/com/mnenmenth/firenfrost/entity/living/: LivingEntity.cpp  LivingEntity.h
src/com/mnenmenth/firenfrost/entity/nonliving/loot/: Loot.cpp  Loot.h
src/com/mnenmenth/firenfrost/entity/nonliving/loot/equippable/: Equippable.cpp  Equippable.h
src/com/mnenmenth/firenfrost/entity/nonliving/loot/equippable/armour/: Armour.cpp  Armour.h
src/com/mnenmenth/firenfrost/entity/nonliving/loot/equippable/weapon/: Weapon.cpp  Weapon.h
src/com/mnenmenth/firenfrost/render/: Render.cpp  Render.h
